Thu Sep 15 21:40:03 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* doc/extension.ja.rdoc: Fix file name.

Thu Sep 15 00:59:30 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* benchmark/: add vnmakarov's benchmarks around hash [ruby-core:75265]

Wed Sep 14 07:02:31 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* hash.c (each_pair_i_fast): use rb_yield_values2 to avoid var args.

Tue Sep 13 21:32:54 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* string.c (STR_HEAP_SIZE, RESIZE_CAPA_TERM, str_new0, rb_str_buf_new,
	  str_shared_replace, rb_str_init, str_make_independent_expand,
	  rb_str_resize): Avoid overflow by casting the length to size_t. size_t
	  should be able to represent LONG_MAX+termlen.

	* string.c (rb_str_modify_expand): Check that the new length is in the
	  range of long before resizing. Also refactor to use RESIZE_CAPA_TERM
	  macro.

	* string.c (str_buf_cat): Fix so that it does not create a negative
	  length String. Also fix the condition for 'string sizes too big', the
	  total length can be up to LONG_MAX.

	* string.c (rb_str_plus): Check the resulting String length does not
	  exceed LONG_MAX.

	* string.c (rb_str_dump): Fix integer overflow. The dump result will be
	  longer then the original String.

Tue Sep 13 21:30:53 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* gc.c (heap_extend_pages, get_envparam_size, ruby_malloc_size_overflow,
	  gc_profile_dump_on): Use PRIuSIZE instead of PRIdSIZE as the passed
	  value is size_t, not ssize_t.

	* iseq.c (get_line_info, rb_iseq_disasm_insn): Ditto.

	* sprintf.c (rb_str_format): Ditto.

	* thread_win32.c (native_thread_create): Ditto.

	* vm.c (get_param): Ditto.

	* ext/objspace/objspace_dump.c (dump_append_string_content,
	  dump_object): Ditto.

	* ext/socket/raddrinfo.c (host_str, port_str): Ditto.

Tue Sep 13 21:27:35 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* string.c (STR_EMBEDDABLE_P): Renamed from STR_EMBEDABLE_P(). And use
	  it in more places.

Tue Sep 13 21:23:51 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
